<resources>
    <string name="aar_name">HtcWalletSdk</string>
    <string name="aar_version">1.0a</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="addcontacts_title">Add contact</string>
    <string name="addwallet_add_wallet">ADD WALLET</string>
    <string name="addwallet_asset_type">ASSET TYPE</string>
    <string name="addwallet_backup_button">Backup file/text</string>
    <string name="addwallet_create">Create Wallet</string>
    <string name="addwallet_create_new">Create new</string>
    <string name="addwallet_create_new_wallet">CREATE NEW WALLET</string>
    <string name="addwallet_enter_password">Enter your password</string>
    <string name="addwallet_enter_recovery">Enter word {0} of your 12-word recovery phrase</string>
    <string name="addwallet_enter_recovery_error_message">Please check your spelling and try again</string>
    <string name="addwallet_enter_recovery_error_title">Phrase is invalid</string>
    <string name="addwallet_enter_recovery_generic">Enter your 12-word recovery phrase</string>
    <string name="addwallet_import">Import</string>
    <string name="addwallet_import_existing_wallet">IMPORT EXISTING WALLET</string>
    <string name="addwallet_import_wallet">Import wallet</string>
    <string name="addwallet_incorrect_password">incorrect password</string>
    <string name="addwallet_name_description">Enter a name for your new wallet</string>
    <string name="addwallet_paste_backup_plaintext">Paste backup plain text code</string>
    <string name="app_name">Bitcoin.com Wallet</string>
    <string name="app_share_text">Check out the Bitcoin.com Wallet at: https://play.google.com/store/apps/details?id=com.bitcoin.mwallet</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applock__action_settings">Open System Settings</string>
    <string name="applock__create_chooser_option_fingerprint">Fingerprint</string>
    <string name="applock__create_chooser_option_pin">PIN</string>
    <string name="applock__description_chooser">Secure this application with a PIN or your fingerprints?</string>
    <string name="applock__description_confirm">Re-enter your PIN to confirm.</string>
    <string name="applock__description_create_fingerprint">Scan your fingerprint to secure this application.</string>
    <string name="applock__description_create_fingerprint_paused">Fingerprint authentication canceled. Reload this content to restart.</string>
    <string name="applock__description_create_pin">Create a PIN to secure this application.</string>
    <string name="applock__description_create_pin_reattempt">PINs didn\'t match. Try again.</string>
    <string name="applock__description_unlock_fingerprint">Scan your fingerprint to unlock.</string>
    <string name="applock__description_unlock_fingerprint_help">We\'re having trouble recognizing your fingerprint: %1$s</string>
    <string name="applock__description_unlock_pin">Enter your 4-digit PIN.</string>
    <string name="applock__empty_item_min_size_percent">0.2</string>
    <string name="applock__fingerprint_alias">AppLock</string>
    <string name="applock__fingerprint_error_hardware">Missing fingerprint hardware?</string>
    <string name="applock__fingerprint_error_none">No fingerprints found! Enable them in your system settings.</string>
    <string name="applock__fingerprint_error_not_enrolled">You haven\'t setup fingerprint unlocking.</string>
    <string name="applock__fingerprint_error_permission">Fingerprint permission required.</string>
    <string name="applock__fingerprint_error_permission_multiple">Fingerprint permission denied. Please enable fingerprint support in your system settings.</string>
    <string name="applock__fingerprint_error_unknown">Something weird happened.</string>
    <string name="applock__fingerprint_error_unrecognized">Your fingerprint wasn\'t recognized.</string>
    <string name="applock__password_char" />
    <string name="applock__toast_unlock_required">You can\'t do that</string>
    <string name="applock__unlock_error_insufficient_selection">Wrong number of digits! Please try again</string>
    <string name="applock__unlock_error_match_failed">The PINs don\'t match!</string>
    <string name="applock__unlock_error_no_matching_pin_found">There is no saved PIN to unlock.</string>
    <string name="applock__unlock_error_retry_limit_exceeded">You failed too many times. You may try again in %1$s.</string>
    <string name="applock_authenticate">Authenticate to enter</string>
    <string name="applock_tap">Tap to unlock</string>
    <string name="applock_title_error">You must have App lock enabled in the app settings to use this feature.</string>
    <string name="backup_button">Backup now</string>
    <string name="backup_warning_description">Backup your recovery phrase to avoid losing access to your wallet</string>
    <string name="backup_warning_title">Wallet backup required</string>
    <string name="bch_symbol">BCH</string>
    <string name="boradcast_insufficient_priority">Amount sent didn\'t include a high enough fee. Go to settings and increase Bitcoin Network Fee</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="broadcast_amount_too_low">Amount sent is below the minimum requirements of 546 satoshis</string>
    <string name="broadcast_error_double_spend">There was a conflict with this transaction</string>
    <string name="broadcast_error_mempool_too_long">Transaction failed. Wait for the next block</string>
    <string name="broadcast_general_fail">Transaction failed to send</string>
    <string name="btc_symbol">BTC</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="contact_empty_description">You currently have no contacts.</string>
    <string name="help_feedback">Send feedback</string>
    <string name="pinpad_0">0</string>
    <string name="pinpad_1">1</string>
    <string name="pinpad_2">2</string>
    <string name="pinpad_3">3</string>
    <string name="pinpad_4">4</string>
    <string name="pinpad_5">5</string>
    <string name="pinpad_6">6</string>
    <string name="pinpad_7">7</string>
    <string name="pinpad_8">8</string>
    <string name="pinpad_9">9</string>
    <string name="pinpad_continue">continue</string>
    <string name="send_asset_contact_search">Search contact</string>
    <string name="settings_about">About the Bitcoin.com Wallet</string>
    <string name="settings_address_book">Address book</string>
    <string name="settings_address_book_add_contact">Add contact</string>
    <string name="settings_address_book_description">Create and manage frequently-used addresses. Tap and hold to delete an address</string>
    <string name="settings_applock_title">App lock</string>
    <string name="settings_currencies">Currencies</string>
    <string name="settings_enable_notifications_title">Enable push notifications</string>
    <string name="settings_export_legacy_wallet_file">Export legacy wallet</string>
    <string name="settings_help_support">Help &amp; support</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_description">If you would like to help translate the Bitcoin.com Wallet into other languages, please visit our CrowdIn page</string>
    <string name="settings_language_search_language">Search language</string>
    <string name="settings_language_vist_crowdin">Visit Bitcoin.com CrowdIn</string>
    <string name="settings_network_fee_economy">Economy</string>
    <string name="settings_network_fee_economy_time">About 1 hour</string>
    <string name="settings_network_fee_learn_more">Learn more about fee structures</string>
    <string name="settings_network_fee_normal">Normal</string>
    <string name="settings_network_fee_normal_time">Less than 30 minutes</string>
    <string name="settings_network_fee_policy">Network fee policy</string>
    <string name="settings_network_fee_policy_description">Bitcoin transactions include a small fee for every transaction. The higher the fee, the faster your transaction will be processed. \10\10For normal priority, fees are around 1 satoshi/byte for BCH and 39 satoshi/byte for BTC.</string>
    <string name="settings_network_fee_priority">Priority</string>
    <string name="settings_network_fee_priority_time">About 20 minutes</string>
    <string name="settings_preference_group">Preference</string>
    <string name="settings_share">Share the Bitcoin.com Wallet</string>
    <string name="settings_title">Settings</string>
    <string name="slp_symbol">SLP</string>
</resources>