<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="pinpadFragment" android:background="@color/pinpadWhite" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/gridLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/continueButton" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:gravity="center" android:id="@+id/pinPadButton1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_1" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_2" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_3" android:layout_weight="1" style="@style/PinPadButton"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/pinPadButton4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_4" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_5" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_6" android:layout_weight="1" style="@style/PinPadButton"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/pinPadButton7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_7" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_8" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_9" android:layout_weight="1" style="@style/PinPadButton"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:gravity="center" android:layout_gravity="center" android:id="@+id/pinPadButtonDecimal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" style="@style/PinPadButton"/>
            <Button android:id="@+id/pinPadButton0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pinpad_0" android:layout_weight="1" app:layout_column="1" app:layout_columnWeight="1" style="@style/PinPadButton"/>
            <ImageButton android:layout_gravity="center" android:id="@+id/pinPadButtonBackspace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_chevron_right_black" android:layout_weight="1" android:scaleX="-1" style="@style/PinPadButton"/>
        </LinearLayout>
    </LinearLayout>
    <Button android:enabled="false" android:textColor="@drawable/gradient_button_text_color_selector" android:id="@+id/continueButton" android:background="@drawable/button_round_flat_ripple_selector" android:layout_width="0dp" android:layout_height="48dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/pinpad_continue" android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/gridLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
