<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/background_header_with_underline" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/settings_language" style="@style/AppText.Bold.18.Black"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:text="@string/settings_language_description" style="@style/AppText.Regular.14.MediumGray"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:text="@string/settings_language_vist_crowdin" style="@style/AppTextAppearance.LabelGreen"/>
        <androidx.appcompat.widget.SearchView android:id="@+id/languageSearchView" android:background="@drawable/background_search_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" android:hint="@string/settings_language_search_language" app:iconifiedByDefault="false" app:queryBackground="@drawable/background_search_view"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@+id/languageListView" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>
