<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="@style/AppTextAppearance.FlatButton" android:textSize="18sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/addwallet_create_new_wallet" android:layout_marginStart="24dp" android:layout_marginEnd="24dp"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/AppTextAppearance.FlatButton" android:textSize="14sp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginBottom="8dp" android:text="@string/addwallet_asset_type" android:layout_weight="1" android:layout_marginStart="24dp"/>
            <RadioGroup android:orientation="horizontal" android:id="@+id/coinSelectionGroup" android:padding="2dp" android:layout_width="213dp" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginBottom="8dp" android:layout_marginEnd="24dp" style="@style/AppTheme.ToggleButton">
                <RadioButton android:gravity="center" android:id="@+id/bitcoinCashSelectionButton" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/bch_symbol" android:layout_weight="1" style="@style/AppTheme.ToggleButton"/>
                <RadioButton android:gravity="center" android:id="@+id/bitcoinSelectionButton" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/btc_symbol" android:layout_weight="1" style="@style/AppTheme.ToggleButton"/>
            </RadioGroup>
        </LinearLayout>
        <EditText android:id="@+id/newWalletNameEditText" android:layout_width="match_parent" android:layout_height="64dp" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:hint="@string/addwallet_name_description" android:singleLine="true" android:maxLength="24" android:backgroundTint="@color/editTextUnderline"/>
        <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <Button android:enabled="false" android:textColor="@drawable/gradient_button_text_color_selector" android:id="@+id/createWalletButton" android:background="@drawable/button_round" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="16dp" android:text="@string/addwallet_create"/>
        </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:id="@+id/loadingAnimation" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/animation_onboard_loading"/>
    </LinearLayout>
</ScrollView>
