<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:background="@drawable/background_header_with_underline" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/settings_address_book" style="@style/AppText.Bold.18.Black"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:text="@string/settings_address_book_description" style="@style/AppText.Regular.14.MediumGray"/>
        <Button android:textAppearance="@style/AppTextAppearance.FlatButton" android:textColor="@drawable/gradient_button_text_color_selector" android:id="@+id/addContactButton" android:background="@drawable/button_round_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="24dp" android:layout_marginTop="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp" android:text="@string/settings_address_book_add_contact"/>
    </LinearLayout>
    <fragment android:name="com.bitcoin.mwallet.app.components.contactlist.view.ContactListView" android:tag="contactListView" android:layout_width="match_parent" android:layout_height="match_parent"/>
</LinearLayout>
